# filosofos-comensales

./: CMakeLists.txt  README.md
src/: main.cpp
src/headers/: DiningTable.hpp  Dish.hpp  Logger.hpp  Pause.hpp  Philosopher.hpp  parseArgs.hpp
src/utils/: DiningTable.cpp  Philosopher.cpp  parseArgs.cpp
